# diplom

./: .env_example  README.md  employee_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
employee/: forms.py  models.py  service.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_alter_employee_room.py  0002_employee_password.py  0003_alter_employee_first_name_alter_employee_image_and_more.py  0004_remove_employee_first_name_remove_employee_image_and_more.py  0005_employee_photo.py
employee/templates/employee/: employee_detail.html  employee_form.html  employee_list.html
employee/templatetags/: tags.py
service/: admin.py  forms.py  models.py  urls.py  views.py
service/management/commands/: aps.py
service/migrations/: 0001_initial.py  0002_service_employee_alter_service_name.py  0003_signup.py  0004_alter_signup_time.py  0005_alter_signup_time.py  0006_alter_signup_date.py  0007_alter_signup_user.py  0008_alter_signup_date.py  0009_alter_signup_date.py  0010_alter_signup_date.py  0011_alter_signup_options_alter_signup_date.py  0012_alter_signup_employee.py  0013_alter_signup_date_alter_signup_time.py  0014_alter_signup_time.py  0015_alter_signup_time.py  0016_alter_signup_time.py  0017_alter_signup_time.py  0018_alter_signup_date_alter_signup_time.py  0019_alter_signup_date.py  0020_alter_signup_time.py  0021_alter_signup_date_alter_signup_time.py
service/templates/service/: answer.html  base.html  (+10 more)
static/js/: color-modes.js
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+7 files in other folders)
