[tool.poetry]
name = "site"
version = "0.1.0"
description = "medic"
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
black = "^24.4.2"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
redis = "^5.0.8"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
